Re-add Module 2 notebook after refactor of code to question no 1

--- a/02-dataframe-analysis/[2025]_Module_02_Working_with_the_data.ipynb
+++ b/02-dataframe-analysis/[2025]_Module_02_Working_with_the_data.ipynb
@@ -75,6 +75,473 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "20f95a27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Open', 'High', 'Low', 'Close_x', 'Volume', 'Dividends', 'Stock Splits', 'Ticker', 'Year', 'Month', 'Weekday', 'Date', 'growth_1d', 'growth_3d', 'growth_7d', 'growth_30d', 'growth_90d', 'growth_365d', 'growth_future_30d', 'SMA10', 'SMA20', 'growing_moving_average', 'high_minus_low_relative', 'volatility', 'is_positive_growth_30d_future', 'ticker_type', 'index_x', 'adx', 'adxr', 'apo', 'aroon_1', 'aroon_2', 'aroonosc', 'bop', 'cci', 'cmo', 'dx', 'macd', 'macdsignal', 'macdhist', 'macd_ext', 'macdsignal_ext', 'macdhist_ext', 'macd_fix', 'macdsignal_fix', 'macdhist_fix', 'mfi', 'minus_di', 'mom', 'plus_di', 'dm', 'ppo', 'roc', 'rocp', 'rocr', 'rocr100', 'rsi', 'slowk', 'slowd', 'fastk', 'fastd', 'fastk_rsi', 'fastd_rsi', 'trix', 'ultosc', 'willr', 'index_y', 'ad', 'adosc', 'obv', 'atr', 'natr', 'ht_dcperiod', 'ht_dcphase', 'ht_phasor_inphase', 'ht_phasor_quadrature', 'ht_sine_sine', 'ht_sine_leadsine', 'ht_trendmod', 'avgprice', 'medprice', 'typprice', 'wclprice', 'index', 'cdl2crows', 'cdl3blackrows', 'cdl3inside', 'cdl3linestrike', 'cdl3outside', 'cdl3starsinsouth', 'cdl3whitesoldiers', 'cdlabandonedbaby', 'cdladvancedblock', 'cdlbelthold', 'cdlbreakaway', 'cdlclosingmarubozu', 'cdlconcealbabyswall', 'cdlcounterattack', 'cdldarkcloudcover', 'cdldoji', 'cdldojistar', 'cdldragonflydoji', 'cdlengulfing', 'cdleveningdojistar', 'cdleveningstar', 'cdlgapsidesidewhite', 'cdlgravestonedoji', 'cdlhammer', 'cdlhangingman', 'cdlharami', 'cdlharamicross', 'cdlhighwave', 'cdlhikkake', 'cdlhikkakemod', 'cdlhomingpigeon', 'cdlidentical3crows', 'cdlinneck', 'cdlinvertedhammer', 'cdlkicking', 'cdlkickingbylength', 'cdlladderbottom', 'cdllongleggeddoji', 'cdllongline', 'cdlmarubozu', 'cdlmatchinglow', 'cdlmathold', 'cdlmorningdojistar', 'cdlmorningstar', 'cdlonneck', 'cdlpiercing', 'cdlrickshawman', 'cdlrisefall3methods', 'cdlseparatinglines', 'cdlshootingstar', 'cdlshortline', 'cdlspinningtop', 'cdlstalledpattern', 'cdlsticksandwich', 'cdltakuru', 'cdltasukigap', 'cdlthrusting', 'cdltristar', 'cdlunique3river', 'cdlupsidegap2crows', 'cdlxsidegap3methods', 'growth_dax_1d', 'growth_dax_3d', 'growth_dax_7d', 'growth_dax_30d', 'growth_dax_90d', 'growth_dax_365d', 'growth_snp500_1d', 'growth_snp500_3d', 'growth_snp500_7d', 'growth_snp500_30d', 'growth_snp500_90d', 'growth_snp500_365d', 'growth_dji_1d', 'growth_dji_3d', 'growth_dji_7d', 'growth_dji_30d', 'growth_dji_90d', 'growth_dji_365d', 'growth_epi_1d', 'growth_epi_3d', 'growth_epi_7d', 'growth_epi_30d', 'growth_epi_90d', 'growth_epi_365d', 'Quarter', 'gdppot_us_yoy', 'gdppot_us_qoq', 'cpi_core_yoy', 'cpi_core_mom', 'FEDFUNDS', 'DGS1', 'DGS5', 'DGS10', 'Close_y', 'growth_gold_1d', 'growth_gold_3d', 'growth_gold_7d', 'growth_gold_30d', 'growth_gold_90d', 'growth_gold_365d', 'growth_wti_oil_1d', 'growth_wti_oil_3d', 'growth_wti_oil_7d', 'growth_wti_oil_30d', 'growth_wti_oil_90d', 'growth_wti_oil_365d', 'growth_brent_oil_1d', 'growth_brent_oil_3d', 'growth_brent_oil_7d', 'growth_brent_oil_30d', 'growth_brent_oil_90d', 'growth_brent_oil_365d', 'growth_btc_usd_1d', 'growth_btc_usd_3d', 'growth_btc_usd_7d', 'growth_btc_usd_30d', 'growth_btc_usd_90d', 'growth_btc_usd_365d']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.columns.tolist())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b555bccb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Loaded 100 rows.\n",
+      "['Symbol', 'Company Name', 'Price Range', 'Shares Offered']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import requests\n",
+    "from io import StringIO\n",
+    "\n",
+    "# URL and headers\n",
+    "url = 'https://stockanalysis.com/ipos/withdrawn/'\n",
+    "headers = {\n",
+    "    \"User-Agent\": \"Mozilla/5.0\"\n",
+    "}\n",
+    "\n",
+    "# Request and parse\n",
+    "response = requests.get(url, headers=headers)\n",
+    "tables = pd.read_html(StringIO(response.text))\n",
+    "ipo_df = tables[0]\n",
+    "\n",
+    "# Confirm load\n",
+    "print(f\"✅ Loaded {len(ipo_df)} rows.\")\n",
+    "print(ipo_df.columns.tolist())  # Check actual column names\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "8265a66a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2: Classify company names into types\n",
+    "def classify_company(name):\n",
+    "    name = name.lower()\n",
+    "    if 'acquisition corp' in name or 'acquisition corporation' in name:\n",
+    "        return 'Acq.Corp'\n",
+    "    elif 'inc' in name or 'incorporated' in name:\n",
+    "        return 'Inc'\n",
+    "    elif 'group' in name:\n",
+    "        return 'Group'\n",
+    "    elif 'ltd' in name or 'limited' in name:\n",
+    "        return 'Limited'\n",
+    "    elif 'holdings' in name:\n",
+    "        return 'Holdings'\n",
+    "    else:\n",
+    "        return 'Other'\n",
+    "\n",
+    "# ✅ Correct column name: 'Company Name'\n",
+    "ipo_df['Company Class'] = ipo_df['Company Name'].apply(classify_company)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8a203563",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Price Range</th>\n",
+       "      <th>Avg Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>$3.00 - $4.00</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Price Range  Avg Price\n",
+       "0              -        NaN\n",
+       "1  $3.00 - $4.00        3.5\n",
+       "2              -        NaN\n",
+       "3              -        NaN\n",
+       "4              -        NaN"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Step 3: Parse average price from 'Price Range' column\n",
+    "def parse_avg_price(price_range):\n",
+    "    if price_range == '-' or pd.isna(price_range):\n",
+    "        return None\n",
+    "    prices = price_range.replace('$', '').split('-')\n",
+    "    try:\n",
+    "        prices = [float(p) for p in prices]\n",
+    "        return sum(prices) / len(prices)  # average\n",
+    "    except:\n",
+    "        return None\n",
+    "\n",
+    "# Apply function to create a new column\n",
+    "ipo_df['Avg Price'] = ipo_df['Price Range'].apply(parse_avg_price)\n",
+    "\n",
+    "# Optional: quick look\n",
+    "ipo_df[['Price Range', 'Avg Price']].head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "8210bf5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Shares Offered</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2000000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Shares Offered\n",
+       "0             NaN\n",
+       "1       2000000.0\n",
+       "2             NaN\n",
+       "3             NaN\n",
+       "4             NaN"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Step 4: Convert 'Shares Offered' to numeric by removing commas\n",
+    "ipo_df['Shares Offered'] = pd.to_numeric(\n",
+    "    ipo_df['Shares Offered'].str.replace(',', ''),\n",
+    "    errors='coerce'\n",
+    ")\n",
+    "\n",
+    "# Optional: check result\n",
+    "ipo_df[['Shares Offered']].head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "2af6fed2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Non-null Withdrawn Value entries: 71\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company Name</th>\n",
+       "      <th>Shares Offered</th>\n",
+       "      <th>Avg Price</th>\n",
+       "      <th>Withdrawn Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Odyssey Therapeutics, Inc.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Unifoil Holdings, Inc.</td>\n",
+       "      <td>2000000.0</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>7000000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Aurion Biotech, Inc.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PHI Group, Inc.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>One Power Company</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>The Great Restaurant Development Holdings Limited</td>\n",
+       "      <td>1400000.0</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>7000000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Caring Brands, Inc.</td>\n",
+       "      <td>750000.0</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>3000000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Sequoia Vaccines, Inc.</td>\n",
+       "      <td>2775000.0</td>\n",
+       "      <td>9.00</td>\n",
+       "      <td>24975000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Shenni Holdings Limited</td>\n",
+       "      <td>3000000.0</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>15000000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Key Mining Corp.</td>\n",
+       "      <td>4444444.0</td>\n",
+       "      <td>2.25</td>\n",
+       "      <td>9999999.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        Company Name  Shares Offered  \\\n",
+       "0                         Odyssey Therapeutics, Inc.             NaN   \n",
+       "1                             Unifoil Holdings, Inc.       2000000.0   \n",
+       "2                               Aurion Biotech, Inc.             NaN   \n",
+       "3                                    PHI Group, Inc.             NaN   \n",
+       "4                                  One Power Company             NaN   \n",
+       "5  The Great Restaurant Development Holdings Limited       1400000.0   \n",
+       "6                                Caring Brands, Inc.        750000.0   \n",
+       "7                             Sequoia Vaccines, Inc.       2775000.0   \n",
+       "8                            Shenni Holdings Limited       3000000.0   \n",
+       "9                                   Key Mining Corp.       4444444.0   \n",
+       "\n",
+       "   Avg Price  Withdrawn Value  \n",
+       "0        NaN              NaN  \n",
+       "1       3.50        7000000.0  \n",
+       "2        NaN              NaN  \n",
+       "3        NaN              NaN  \n",
+       "4        NaN              NaN  \n",
+       "5       5.00        7000000.0  \n",
+       "6       4.00        3000000.0  \n",
+       "7       9.00       24975000.0  \n",
+       "8       5.00       15000000.0  \n",
+       "9       2.25        9999999.0  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Step 5: Calculate Withdrawn IPO Value in USD millions\n",
+    "ipo_df['Withdrawn Value'] = ipo_df['Shares Offered'] * ipo_df['Avg Price']\n",
+    "\n",
+    "# Check how many valid values we have\n",
+    "print(f\"✅ Non-null Withdrawn Value entries: {ipo_df['Withdrawn Value'].notnull().sum()}\")\n",
+    "\n",
+    "# Optional: preview result\n",
+    "ipo_df[['Company Name', 'Shares Offered', 'Avg Price', 'Withdrawn Value']].head(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "56732624",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "📊 Total Withdrawn IPO Value by Company Class (in millions):\n",
+      "Company Class\n",
+      "Acq.Corp    4.021000e+09\n",
+      "Inc         2.257164e+09\n",
+      "Other       7.679200e+08\n",
+      "Limited     5.497346e+08\n",
+      "Holdings    7.500000e+07\n",
+      "Group       3.378750e+07\n",
+      "Name: Withdrawn Value, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 6: Group by 'Company Class' and sum 'Withdrawn Value'\n",
+    "grouped = ipo_df.groupby('Company Class')['Withdrawn Value'].sum().sort_values(ascending=False)\n",
+    "\n",
+    "# Display the totals by class\n",
+    "print(\"\\n📊 Total Withdrawn IPO Value by Company Class (in millions):\")\n",
+    "print(grouped)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "30d30ea2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "✅ The company class with the highest total withdrawn value is: Acq.Corp ($4021 million)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 7: Identify top company class and its value\n",
+    "max_class = grouped.idxmax()\n",
+    "max_value = grouped.max()\n",
+    "\n",
+    "print(f\"\\n✅ The company class with the highest total withdrawn value is: {max_class} (${max_value/1e6:.0f} million)\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "184895e9",
    "metadata": {},
